tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@invalid_array_idx.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/invalid_array_idx.txt
---
error: Array index must be an integer, got `f64`.
 --> invalid_array_idx.txt:1:12
  |
1 | {{ vectors[1.1] }}
  |            ^^^
